# badgesdk-src

./: CMakeLists.txt  Makefile  add_to_bashrc.py
files_to_copy/: CMakeLists.txt  import.cmake
files_to_copy/link/: default.ld
lib/: CMakeLists.txt
lib/badgert/: CMakeLists.txt
lib/c/: CMakeLists.txt
lib/c/include/: assert.h  errno.h  stddef.h  stdio.h  string.h
lib/c/include/bits/: file.h  list_malloc.h
lib/c/src/: malloc.c  stdio.c  string.c
lib/c/src/bits/: list_malloc.c
lib/display/: CMakeLists.txt
lib/display/include/: display.h
lib/display/src/: display.c
lib_stubs/: CMakeLists.txt
lib_stubs/abi/: CMakeLists.txt
lib_stubs/abi/include/: badgeabi.h
lib_stubs/abi/src/: fd.c  mem.c  misc.c
lib_stubs/badge/: CMakeLists.txt
lib_stubs/badge/include/: system.h
lib_stubs/badge/src/: gpio.c  system.c
lib_stubs/cstub/: CMakeLists.txt
lib_stubs/cstub/src/: malloc.c
lib_stubs/implicitops/: CMakeLists.txt
lib_stubs/implicitops/src/: float.c  int.c
lib_stubs/libbadge/include/: gpio.h
lib_stubs/libcstub/: CMakeLists.txt
lib_stubs/libcstub/src/: stdlib.c
lib_stubs/libfloat/: CMakeLists.txt
lib_stubs/libm/src/: math.c
lib_stubs/m/: CMakeLists.txt
lib_stubs/m/include/: math.h
